--- a/base/style/style.scss
+++ b/base/style/style.scss
@@ -269,6 +269,7 @@ header{
       }
       p{
         font-size: 2.4rem;
+        line-height: 2.8rem;
       }
       a{
         max-width: 280px;
@@ -856,12 +857,16 @@ footer{
         &__buttons{
           display: flex;
           justify-content: space-between;
+          flex-wrap: wrap;
         }
       }
     }
   }
 }
 @media screen and (max-width: 1200px){
+  :root{
+    font-size: 8px;
+  }
   ::-webkit-scrollbar {
     width: 4px;
     height: 4px;
@@ -975,12 +980,11 @@ footer{
           -webkit-box-sizing: border-box;
           box-sizing: border-box;
           width: 100%;
-          margin: 0 20px 0 0;
         }
         img{
           position: absolute;
-          top:33px;
-          right: 16px;
+          top:30px;
+          right: 10px;
         }
       }
       &__list{
@@ -1035,24 +1039,340 @@ footer{
           }
         }
       }
+      &__buttons{
+        display: none;
+      }
     }
-  }
-  #Mobile-menu{
     &.mobile-menu-active{
       transform:translateY(0);
     }
   }
+  #Investments{
+    .investments{
+      &__img{
+        img{
+          max-width:500px;
+        }
+      }
+    }
+  }
+  #IPO,#ETF,#Deposit,#Sentence{
+    width: 100%;
+    .ipo,.etf,.deposit,.sentence{
+      width: 100%;
+      img{
+        max-width: 50%;
+        max-height: 833px;
+      }
+    }
+  }
 }
 @media screen and (max-width: 992px){
-
+  :root{
+    font-size: 7px;
+  }
+  #Investments{
+    .investments{
+      &__description{
+        &__ratings{
+          display: none;
+        }
+      }
+    }
+  }
+  #Partners{
+    .partners{
+      flex-wrap: wrap;
+      justify-content: space-around;
+      margin:40px 0;
+    }
+  }
+  #Quick-start{
+    .quick-start{
+      flex-direction: column;
+      justify-content: flex-start;
+      img{
+        max-width: 312px;
+        max-height: 395px;
+      }
+      &__description{
+        h3{
+          padding: 40px 0 20px 0;
+        }
+        ul{
+          li{
+            padding: 0 0 12px 0;
+          }
+        }
+        a{
+          margin:20px 0 0 0;
+        }
+      }
+    }
+  }
+  #IPO,#ETF,#Deposit,#Sentence{
+    border-bottom: 1px solid #F0F0F0;
+    .ipo,.etf,.deposit,.sentence{
+      flex-direction: column;
+      justify-content: flex-start;
+      padding: 140px 0 0 0;
+      &__description{
+        padding: 0 0 20px 0;
+        h3,p{
+          padding: 0 0 20px 0;
+        }
+        &__information{
+          padding: 0 0 20px 0;
+          &__unit{
+            p{
+              padding: 0;
+            }
+          }
+        }
+      }
+      img{
+        max-width: 50%;
+        max-height: 833px;
+      }
+    }
+  }
+  #Awards{
+    .awards{
+      text-align: left;
+      h4{
+        padding: 70px 0 20px 0;
+      }
+      p{
+        padding: 0 0 40px 0;
+      }
+    }
+  }
+  #Safety{
+    .safety{
+      padding: 130px 0 0 0;
+      h3{
+        padding: 0 0 20px 0;
+      }
+      &__description{
+        padding: 30px;
+        flex-direction: column-reverse;
+        p{
+          text-align: left;
+          line-height: 2.4rem;
+          align-self: flex-start;
+          width: 100%;
+          padding: 30px 0 0 0;
+        }
+        img{
+          max-width: 144px;
+        }
+      }
+    }
+  }
+  #Invest-form{
+    .invest-form{
+      padding: 70px 0 0 0;
+    }
+  }
+  footer{
+    .footer{
+      &__main{
+        flex-wrap: wrap;
+      }
+      &__information{
+        &__text{
+          width: 50%;
+        }
+      }
+      &__description{
+        &__authorization{
+          &__social-networks{
+            a{
+              padding: 10px;
+            }
+          }
+        }
+      }
+    }
+  }
 }
 @media screen and (max-width: 768px){
   .container{
     padding: 0 18px;
   }
+  header{
+    .header{
+      &__buttons{
+        display: none;
+      }
+    }
+  }
+  #Mobile-menu{
+    .mobile-menu{
+      &__buttons{
+        display: flex;
+        justify-content: space-between;
+        a{
+          width: 45%;
+          padding: 15px 0;
+          border: 1px solid $green;
+        }
+      }
+    }
+  }
+  #Investments{
+    .investments{
+      display: flex;
+      flex-direction: column;
+      padding: 140px 0 0 0;
+      min-height: auto;
+      &__description{
+        padding: 0 0 40px 0;
+      }
+      &__img{
+        position: relative;
+        img:nth-child(1){
+          position: relative;
+          max-width: 100%;
+        }
+        img:nth-child(2){
+          position: absolute;
+        }
+      }
+    }
+  }
+  #Partners{
+    .partners{
+      img{
+        margin: 0 20px 20px 20px;
+      }
+    }
+  }
+  #Awards{
+    .awards{
+      ul{
+        li{
+          padding: 30px;
+          svg{
+            max-width: 100%;
+          }
+        }
+      }
+    }
+  }
+  footer{
+    .footer{
+      &__main{
+        &__contacts,&__services,&__documents,&__information{
+          width: 50%;
+        }
+        &__services,&__documents{
+          padding: 0 0 20px 0;
+        }
+        &__contacts{
+          order: 3;
+        }
+        &__information{
+          order: 4;
+        }
+      }
+      &__information{
+        flex-direction: column;
+        padding: 30px 0;
+        svg{
+          display: none;
+        }
+        &__text,&__licenses{
+          svg{
+            display: block;
+          }
+          width: 100%;
+          padding: 0;
+        }
+      }
+      &__description{
+        flex-direction: column-reverse;
+        &__authorization{
+          order: 2;
+          padding: 0 0 20px 0;
+        }
+        &__download{
+          order: 1;
+          padding: 0 0 20px 0;
+          width: 100%;
+          &__buttons{
+            justify-content: flex-start;
+            a{
+              margin:0 10px 0 0;
+            }
+          }
+        }
+        &__text{
+          padding: 0;
+          width: 100%;
+        }
+      }
+    }
+  }
 }
 @media screen and (max-width: 576px){
+  header{
+    .header{
+      &__logo{
+        max-width: 50%;
+        img{
+          width: 100%;
+        }
+      }
+      &__burger-menu{
+        &__button{
+          margin:auto 0 auto auto;
+        }
+      }
+    }
+  }
+  #Mobile-menu{
+    top:67px;
+    height: calc(100% - 67px);
+    .mobile-menu{
 
+    }
+  }
+  #Quick-start{
+    .quick-start{
+      &__description{
+        a{
+          width: 100%;
+        }
+      }
+    }
+  }
+  #IPO,#ETF,#Deposit,#Sentence{
+    .ipo,.etf,.deposit,.sentence{
+      &__description{
+        a{
+          width: 100%;
+        }
+      }
+    }
+  }
+  footer{
+    .footer{
+      &__main{
+        &__contacts,&__information{
+          width: 100%;
+        }
+        &__services,&__documents{
+          width: 50%;
+        }
+        &__information{
+          &__reliability{
+            padding: 0 0 20px 0;
+          }
+        }
+      }
+    }
+  }
 }
 @media screen and (max-width: 320px){
 
