--- a/base/style/style.css
+++ b/base/style/style.css
@@ -1351,7 +1351,7 @@ footer .footer__description__download__buttons {
     padding: 0;
   }
   #IPO .ipo img, #IPO .etf img, #IPO .deposit img, #IPO .sentence img, #ETF .ipo img, #ETF .etf img, #ETF .deposit img, #ETF .sentence img, #Deposit .ipo img, #Deposit .etf img, #Deposit .deposit img, #Deposit .sentence img, #Sentence .ipo img, #Sentence .etf img, #Sentence .deposit img, #Sentence .sentence img {
-    max-width: 50%;
+    max-width: 100%;
     max-height: 833px;
   }
 
@@ -1537,6 +1537,9 @@ footer .footer__description__download__buttons {
   header .header__logo img {
     width: 100%;
   }
+  header .header__cart {
+    margin: auto 20px auto auto;
+  }
   header .header__burger-menu__button {
     margin: auto 0 auto auto;
   }
@@ -1557,7 +1560,8 @@ footer .footer__description__download__buttons {
   }
 
   #IPO .ipo__description a, #IPO .etf__description a, #IPO .deposit__description a, #IPO .sentence__description a, #ETF .ipo__description a, #ETF .etf__description a, #ETF .deposit__description a, #ETF .sentence__description a, #Deposit .ipo__description a, #Deposit .etf__description a, #Deposit .deposit__description a, #Deposit .sentence__description a, #Sentence .ipo__description a, #Sentence .etf__description a, #Sentence .deposit__description a, #Sentence .sentence__description a {
-    width: 100%;
+    width: 200px;
+    padding: 11px 0;
   }
 
   footer .footer__main__contacts, footer .footer__main__information {
@@ -1570,13 +1574,21 @@ footer .footer__description__download__buttons {
     padding: 0 0 20px 0;
   }
 
-  #Awards .awards ul {
-    overflow-y: hidden;
-    overflow-x: scroll;
-    margin: 0 0 -60px 0;
-    height: auto;
+  #Awards .awards {
+    height: 100%;
   }
-  #Awards .awards ul li {
+  #Awards .awards nav {
+    overflow-x: scroll;
+    overflow-y: hidden;
+    margin: 0 0 -60px 0;
+    height: 420px;
+  }
+  #Awards .awards nav ul {
+    width: 550px;
+    overflow-y: hidden;
+    height: 420px;
+  }
+  #Awards .awards nav ul li {
     padding: 30px;
     width: 260px;
     height: auto;
